Implement working UI!

--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -4,5 +4,6 @@
         <script type="application/javascript" src="nvimui.js"></script>
     </head>
     <body>
+        <pre id="pre"></pre>
     </body>
 </html>
