--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -2,6 +2,15 @@
     <head>
         <meta charset="utf-8"/>
         <script type="application/javascript" src="nvimui.js"></script>
+    <style>
+    html, body, #pre {
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow: hidden;
+    }
+    </style>
     </head>
     <body>
         <pre id="pre"></pre>
