--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -1,4 +1,4 @@
-<html>
+<html class="nvim_highlight_0">
     <head>
         <meta charset="utf-8"/>
         <script type="application/javascript" src="nvimui.js"></script>
@@ -10,7 +10,19 @@
         padding: 0px;
         overflow: hidden;
     }
+    .nvim_row {
+        display: block;
+    }
+    .nvim_cell {
+        display: inline-block;
+        width: 1ch;
+    }
+    html body .nvim_cursor {
+        background: red;
+        color: red;
+    }
     </style>
+    <style id="neovim_highlights"></style>
     </head>
     <body>
         <pre id="pre"></pre>
