--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -10,7 +10,8 @@
                 overflow: hidden;
             }
             #keyhandler {
-                height: 0px;
+                height: 1px;
+                opacity: 0.01;
                 overflow: hidden;
                 outline: none;
                 border: none;
