Handle resizes better

--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -16,6 +16,8 @@
                 outline: none;
                 border: none;
                 position: absolute;
+                margin: 0px;
+                padding: 0px;
             }
             .nvim_row {
                 display: block;
