Add option to select what elements Firenvim should override

--- a/src/preferences/preferences.html
+++ b/src/preferences/preferences.html
@@ -16,7 +16,7 @@
                 padding-top: 5pt;
                 padding-bottom: 5pt;
             }
-            .listoption textarea {
+            #main textarea {
                 display: block;
                 margin-left: 20pt;
                 width: 80ch;
