Allow disabling firenvim from its browserAction

--- a/src/browserAction.html
+++ b/src/browserAction.html
@@ -16,6 +16,7 @@
     </head>
     <body style="padding: 2pt; width: 135pt">
         <button id="reloadSettings">Reload settings</button>
+        <button id="disableFirenvim">Disable in this tab</button>
         <div id="errors"></div>
     </body>
 </html>
