--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -29,6 +29,9 @@
         </style>
         <style id="nvim_highlight_style"></style>
         <style id="nvim_cursor_style"></style>
+        <style id="nvim_linespace"></style>
+        <style id="nvim_guifont"></style>
+        <style id="mouse_cursor"></style>
         <script type="application/javascript" src="nvimui.js"></script>
     </head>
     <body>
