Dynamically create browserAction icons
Closes #104.

--- a/src/browserAction.html
+++ b/src/browserAction.html
@@ -18,5 +18,6 @@
         <button id="reloadSettings">Reload settings</button>
         <button id="disableFirenvim">Disable in this tab</button>
         <div id="errors"></div>
+        <div id="warnings"></div>
     </body>
 </html>
