Handle resizes better

--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -8,6 +8,9 @@
                 margin: 0px;
                 padding: 0px;
                 overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
             #keyhandler {
                 height: 1px;
