--- a/tests/pages/simple.html
+++ b/tests/pages/simple.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" id="html">
         <head>
                 <meta charset="utf-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <title>Test Page</title>
         </head>
-        <body>
+        <body id="body">
                 <textarea id="content-input" rows="20" cols="80"></textarea>
         </body>
 </html>
