Set default font and default size
This fixes issues where users would set a non-existing font which would
prevent firenvim from correctly computing the size of the frame.

--- a/src/NeovimFrame.html
+++ b/src/NeovimFrame.html
@@ -33,7 +33,7 @@
         <style id="nvim_highlight_style"></style>
         <style id="nvim_cursor_style"></style>
         <style id="nvim_linespace"></style>
-        <style id="nvim_guifont"></style>
+        <style id="nvim_guifont">* { font-family: monospace; font-size: 9pt; }</style>
         <style id="mouse_cursor"></style>
         <script type="application/javascript" src="nvimui.js"></script>
     </head>
