--- a/tests/pages/monaco.html
+++ b/tests/pages/monaco.html
@@ -22,7 +22,7 @@
 			'\tconsole.log("Hello world!");',
 			'}'
 		].join('\n'),
-		language: 'javascript'
+		language: 'typescript'
 	});
 </script>
 
