Fix modifiers not being registered for special keys
This prevented <C-CR> from working.

--- a/tests/pages/chat.html
+++ b/tests/pages/chat.html
@@ -8,7 +8,7 @@
                         addEventListener("load", () => {
                                 const textarea = document.getElementById("content-input");
                                 textarea.addEventListener("keyup", (e) => {
-                                        if (e.key === "Enter") {
+                                        if (e.key === "Enter" && e.ctrlKey) {
                                                 textarea.value = "Message sent!";
                                                 textarea.focus();
                                         }
