Fix Ctrl+Click and middle click, add mouse tests

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html class="nvim_highlight_0">
+<html oncontextmenu="return false;">
     <head>
         <meta charset="utf-8"/>
         <style>
@@ -29,5 +29,5 @@
         <style id="mouse_cursor"></style>
         <script type="application/javascript" src="index.js"></script>
     </head>
-    <body><textarea id="keyhandler"></textarea><canvas id="canvas"></canvas></body>
+    <body oncontextmenu="return false;"><textarea id="keyhandler"></textarea><canvas id="canvas" oncontextmenu="return false;"></canvas></body>
 </html>
