set "caret-color: transparent"

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
             #keyhandler {
                 width: 100%;
                 background-color: transparent;
+                caret-color: transparent;
                 outline: none;
                 border: none;
                 resize: none;
